Add API key authentication middleware and integrate request validation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 BRAVE_SEARCH_API_KEY=brave_search_key
 OPENWEATHER_API_KEY=openweather_api_key
+API_KEY=app_api_key
 
 # 1. Brave Search API (for general search):
 #    Go to https://brave.com/search/api/
@@ -9,3 +10,11 @@ OPENWEATHER_API_KEY=openweather_api_key
 #    Go to https://openweathermap.org/api
 #    Sign up for free (1,000 calls/day)
 #    Get API key from: https://home.openweathermap.org/api_keys
+
+# 3. API_KEY (REQUIRED - for client authentication):
+#    Generate a random secret key to secure your server
+#    This key must be included in all client requests via 'X-API-Key' header
+#
+#    Generate with:
+#    - Python:  python -c "import secrets; print(secrets.token_urlsafe(32))"
+#    - OpenSSL: openssl rand -base64 32
